deployment/k8s/client/1-deployment-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-api-client-depl

spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-server
  template:
    metadata:
      labels:
        app: go-server

    spec:
      containers:
        - name: go-image
          image: mokhlesur96/go-app:1.0.0
          ports:
            - containerPort: 8081
