deployment/k8s/client/2-service-client.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-api-client-svc
  namespace: go-api-server

spec:
  selector:
    app: go-server

  ports:
    - name: go-server
      port: 8081
      targetPort: 8081
      protocol: TCP

  type: NodePort
